# server/handles/image.go
@@ -6,6 +6,7 @@ import (
 	"github.com/FXAZfung/image-board/internal/config"
 	"github.com/FXAZfung/image-board/internal/model"
 	"github.com/FXAZfung/image-board/internal/op"
+	"github.com/FXAZfung/image-board/pkg/random"
 	"github.com/FXAZfung/image-board/pkg/utils"
 	"github.com/FXAZfung/image-board/server/common"
 	"image"
@@ -115,7 +116,7 @@ func ListImages(c *gin.Context) {
 		return
 	}
 
-	common.SuccessResp(c, gin.H{"images": images})
+	common.SuccessResp(c, images)
 }
 
 // GetImageByShortLink 根据短链获取图片
@@ -149,7 +150,7 @@ func GetImageByShortLink(c *gin.Context) {
 // @Param image formData file true "图片"
 // @Param short_link formData string false "自定义短链"
 // @Param category formData string false "分类"
-// @Success 200 {object} string "图片上传成功"
+// @Success 200 {object} string "短链"
 // @Router /api/auth/upload [post]
 func UploadImage(c *gin.Context) {
 	file, err := c.FormFile("image")
@@ -180,6 +181,9 @@ func UploadImage(c *gin.Context) {
 	}
 	width := img.Bounds().Dx()
 	height := img.Bounds().Dy()
+
+	// 对上传的图片的文件名进行处理
+	file.Filename = random.RandomizeFileName(file.Filename)
 
 	// 检查是否有自定义短链
 	customShortLink := c.PostForm("short_link")
@@ -215,10 +219,88 @@ func UploadImage(c *gin.Context) {
 		return
 	}
 
-	common.SuccessResp(c, gin.H{
-		"message":    "Image uploaded successfully",
-		"short_link": customShortLink,
-		"category":   category,
-		"file_name":  file.Filename,
-	})
+	common.SuccessResp(c, customShortLink)
+}
+
+// UploadImages 批量上传图片
+// @Summary 批量上传图片
+// @Description 批量上传图片
+// @Tags auth
+// @Accept multipart/form-data
+// @Produce json
+// @Param Authorization header string true "Token"
+// @Param images formData file true "图片"
+// @Param category formData string false "分类"
+// @Success 200 {object} string "短链"
+// @Router /api/auth/upload [post]
+func UploadImages(c *gin.Context) {
+	form, err := c.MultipartForm()
+	if err != nil {
+		common.ErrorStrResp(c, http.StatusBadRequest, "Failed to get file")
+		return
+	}
+
+	files := form.File["images"]
+	if len(files) == 0 {
+		common.ErrorStrResp(c, http.StatusBadRequest, "Failed to get file")
+		return
+	}
+
+	category := strings.ToLower(c.PostForm("category"))
+
+	for _, file := range files {
+		// 读取文件内容
+		f, err := file.Open()
+		if err != nil {
+			common.ErrorStrResp(c, http.StatusInternalServerError, "Failed to read file")
+			return
+		}
+		defer f.Close()
+
+		data, err := io.ReadAll(f)
+		if err != nil {
+			common.ErrorStrResp(c, http.StatusInternalServerError, "Failed to read file content")
+			return
+		}
+
+		// 获取图片宽高
+		img, _, err := image.Decode(bytes.NewReader(data))
+		if err != nil {
+			common.ErrorStrResp(c, http.StatusBadRequest, "Invalid image format "+err.Error())
+			return
+		}
+		width := img.Bounds().Dx()
+		height := img.Bounds().Dy()
+
+		// 对上传的文件名进行处理
+
+		// 检查是否有自定义短链
+		customShortLink := c.PostForm("short_link")
+		if customShortLink == "" {
+			customShortLink = utils.GenerateShortLink(file.Filename)
+		} else {
+			// 检查短链是否唯一
+			existing, _ := op.GetImageByShortLink(customShortLink)
+			if existing != nil {
+				common.ErrorStrResp(c, http.StatusConflict, "Custom short link already exists")
+				return
+			}
+		}
+
+		targetFilePath := path.Join(config.Conf.DataImage.Dir, category, file.Filename)
+
+		imageData := &model.Image{
+			FileName:  file.Filename,
+			Width:     width,
+			Height:    height,
+			ShortLink: customShortLink,
+		}
+		// 保存图片到数据库
+		err = op.CreateImage(imageData, data, targetFilePath)
+		if err != nil {
+			common.ErrorStrResp(c, http.StatusInternalServerError, "Failed to save image")
+			return
+		}
+	}
+
 }
